widget 05: add node-cron for stock refresh + fix scrollbar style

--- a/client/src/widgets/05/style.scss
+++ b/client/src/widgets/05/style.scss
@@ -106,9 +106,19 @@
           margin-right: -11px;
           scrollbar-gutter: stable;
           scrollbar-width: thin;
+          scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
 
           &::-webkit-scrollbar {
             width: 6px;
+          }
+
+          &::-webkit-scrollbar-track {
+            background: transparent;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.25);
+            border-radius: 3px;
           }
 
           &.loading {
